# ethics-model

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  PYPI_SETUP.md  README.md  TASK_COMPLETION_SUMMARY.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh  setup_cuda_win.ps1
.cursor/plans/: modern-pytorch-refactoring-0a5da79b.plan.md
.github/: copilot-instructions.md
.github/workflows/: codacy.yml  codeql.yml  docker.yml  publish-pypi.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  dependencies_and_packages.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: API.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MISSING_FRONTEND.md  QUICKSTART.md  README.md  TRAINING.md
examples/: advanced_api_usage.py  api_usage.py  create_basic_checkpoint.py  data_usage_example.py  enhanced_ethics_model.py  enhanced_model_showcase.py  ethics_model.ipynb  example_jetbrains.py  networkx_spacy_demo.py  run_api_server.py  train_on_ethics_dataset.py  train_with_api.py  train_with_llm.py
src/ethics_model/: __init__.py  activation.py  attention.py  common.py  cuda_training.py  data.py  data_preprocessing.py  ethics.py  ethics_dataset.py  explainability.py  graph_reasoning.py  model.py  moral.py  narrative.py  nlp_training.py  training.py
src/ethics_model/api/: README.md  __init__.py  app.py  app_training.py  app_visualization.py  client.py  dependencies.py  run.py  settings.py
src/ethics_model/modules/: __init__.py  activation.py  attention.py  explainability.py  gnn.py  gqa.py  graph_semantic.py  moral.py  narrative.py  retriever.py  rope.py  structured_reasoning.py  uncertainty.py
tests/: conftest.py  test_activation.py  test_attention.py  test_cuda.py  test_data.py  test_ethics.py  test_explainability_networkx.py  test_explainability_plotly.py  test_graph_reasoning_networkx.py  test_graph_semantic_networkx.py  test_integration.py  test_llm_training.py  test_moral.py  test_narrative.py  test_pyg_27_features.py  test_rope_gqa.py  test_utils.py
