[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ethics-model"
version = "0.1.0"
description = "Graph Neural Network for ethical reasoning"
readme = "README.md"
authors = [{ name = "Björn Bethge" }]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0,<2.9.0",
    "torchvision",
    "torchaudio",
    "torch-geometric>=2.7.0",
    "transformers",
    "sentencepiece>=0.2.1",
    "pcst-fast>=1.0.10",
    "accelerate",
    "bitsandbytes",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
train = [
    "datasets",
    "hf-transfer",
    "huggingface-hub",
    "nlpaug",
    "optimum",
    "peft",
    "pyarrow",
    "safetensors",
    "tensorboard",
    "torch-tb-profiler",
    "transformers-stream-generator",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.uv]
python-preference = "only-managed"
python-downloads = "automatic"
link-mode = "copy"
compile-bytecode = true
find-links = [
    "https://data.pyg.org/whl/torch-2.8.0+cu128.html"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
